@@ -6,6 +6,7 @@ import javax.swing.table.*;
 import javax.swing.text.JTextComponent;
 import java.awt.*;
 import java.util.List;
+import java.util.Arrays;
 
 import metroMalaga.Model.Usuario;
 import metroMalaga.Model.Language;
@@ -15,35 +16,31 @@ import metroMalaga.Controller.smtp.ButtonHoverHandle;
 import metroMalaga.Controller.smtp.FieldFocusHandle;
 import metroMalaga.Controller.smtp.HandleSMTP;
 
-/**
- * Panel interface for SMTP and IMAP email management within the application.
- * Provides functionality for composing, sending, and viewing emails with theme support.
- */
 public class PanelSMTP extends JPanel {
 
     private final HandleSMTP backend;
     private final Usuario loggedUser;
 
+    // Componentes UI
     private JTextField txtTo, txtSubject;
     private JTextArea txtBody, txtViewer;
     private JTable emailTable;
     private DefaultTableModel tableModel;
-    private JButton btnSend, btnAttach, btnClearAttach, btnRefresh, btnDelete, btnToggleRead, btnDownloadEmail, btnReturn;
+    private JButton btnSend, btnAttach, btnClearAttach, btnRefresh, btnDelete, btnToggleRead, btnDownloadEmail,
+            btnReturn;
     private JLabel lblAttachedFile, lblTo, lblSubject, lblFolder;
     private JComboBox<String> cboFolders;
 
+    // Paneles
     private JPanel pCompose, pInbox, pButtonsCompose, pButtonsInbox, pFields, pFolderSelector, pInboxTop;
     private JSplitPane mainSplit, inboxSplit;
 
     private ButtonHandleSMTP buttonHandler;
 
+    // Fuentes
     private final Font F_HEADER = new Font("Segoe UI", Font.BOLD, 16);
     private final Font F_TEXT = new Font("Segoe UI", Font.PLAIN, 14);
 
-    /**
-     * Initializes the SMTP panel with the specified user and backend login.
-     * @param usuario The logged-in user.
-     */
     public PanelSMTP(Usuario usuario) {
         this.loggedUser = usuario;
         this.backend = new HandleSMTP();
@@ -55,17 +52,11 @@ public class PanelSMTP extends JPanel {
         applyTheme();
     }
 
-    /**
-     * Configures the layout and borders of the main panel.
-     */
     private void setupPanel() {
         setLayout(new BorderLayout(15, 15));
         setBorder(new EmptyBorder(15, 15, 15, 15));
     }
 
-    /**
-     * Updates and applies the visual theme to all UI components and table renderers.
-     */
     public void applyTheme() {
         Color bgMain = Common.getBackground();
         Color bgPanel = Common.getPanelBackground();
@@ -73,6 +64,7 @@ public class PanelSMTP extends JPanel {
         Color border = Common.getBorder();
         Color fieldBg = Common.getFieldBackground();
 
+        // 1. Fondos principales
         this.setBackground(bgMain);
         if (mainSplit != null) {
             mainSplit.setBackground(bgMain);
@@ -83,18 +75,28 @@ public class PanelSMTP extends JPanel {
             inboxSplit.setBorder(null);
         }
 
+        // 2. Paneles
         updatePanelStyle(pCompose, Language.get(53));
         updatePanelStyle(pInbox, Language.get(54));
 
-        if (pFields != null) pFields.setBackground(bgPanel);
-        if (pButtonsCompose != null) pButtonsCompose.setBackground(bgPanel);
-        if (pButtonsInbox != null) pButtonsInbox.setBackground(bgPanel);
-        if (pFolderSelector != null) pFolderSelector.setBackground(bgPanel);
-        if (pInboxTop != null) pInboxTop.setBackground(bgPanel);
+        if (pFields != null)
+            pFields.setBackground(bgPanel);
+        if (pButtonsCompose != null)
+            pButtonsCompose.setBackground(bgPanel);
+        if (pButtonsInbox != null)
+            pButtonsInbox.setBackground(bgPanel);
+        if (pFolderSelector != null)
+            pFolderSelector.setBackground(bgPanel);
+        if (pInboxTop != null)
+            pInboxTop.setBackground(bgPanel);
 
-        if (lblTo != null) lblTo.setForeground(txt);
-        if (lblSubject != null) lblSubject.setForeground(txt);
-        if (lblFolder != null) lblFolder.setForeground(txt);
+        // 3. Etiquetas
+        if (lblTo != null)
+            lblTo.setForeground(txt);
+        if (lblSubject != null)
+            lblSubject.setForeground(txt);
+        if (lblFolder != null)
+            lblFolder.setForeground(txt);
 
         if (lblAttachedFile != null) {
             String lblText = lblAttachedFile.getText();
@@ -105,17 +107,20 @@ public class PanelSMTP extends JPanel {
             }
         }
 
+        // 4. Campos de texto
         updateFieldStyle(txtTo);
         updateFieldStyle(txtSubject);
         updateTextAreaStyle(txtBody);
         updateTextAreaStyle(txtViewer);
 
+        // 5. ComboBox
         if (cboFolders != null) {
             cboFolders.setBackground(fieldBg);
             cboFolders.setForeground(txt);
             cboFolders.setBorder(new LineBorder(border, 1));
         }
 
+        // 6. Tabla - CON RENDERER PERSONALIZADO
         if (emailTable != null) {
             emailTable.setBackground(fieldBg);
             emailTable.setForeground(txt);
@@ -123,12 +128,13 @@ public class PanelSMTP extends JPanel {
             emailTable.setSelectionBackground(Common.isDarkMode ? new Color(200, 0, 0) : new Color(230, 240, 255));
             emailTable.setSelectionForeground(Common.isDarkMode ? Color.WHITE : Color.BLACK);
 
+            // 👇 RENDERER PARA CELDAS NORMALES
             emailTable.setDefaultRenderer(Object.class, new DefaultTableCellRenderer() {
                 @Override
                 public Component getTableCellRendererComponent(JTable table, Object value,
                         boolean isSelected, boolean hasFocus, int row, int column) {
                     Component c = super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);
-                    
+
                     if (!isSelected) {
                         c.setBackground(Common.getFieldBackground());
                         c.setForeground(Common.getText());
@@ -136,7 +142,7 @@ public class PanelSMTP extends JPanel {
                         c.setBackground(Common.isDarkMode ? new Color(200, 0, 0) : new Color(230, 240, 255));
                         c.setForeground(Common.isDarkMode ? Color.WHITE : Color.BLACK);
                     }
-                    
+
                     ((JLabel) c).setBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5));
                     return c;
                 }
@@ -146,12 +152,14 @@ public class PanelSMTP extends JPanel {
             header.setBackground(Common.isDarkMode ? new Color(40, 40, 40) : new Color(245, 245, 245));
             header.setForeground(txt);
             header.setBorder(new MatteBorder(0, 0, 1, 0, border));
-            
+
+            // 👇 RENDERER PARA EL HEADER
             header.setDefaultRenderer(new DefaultTableCellRenderer() {
                 @Override
                 public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected,
                         boolean hasFocus, int row, int column) {
-                    JLabel l = (JLabel) super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row, column);
+                    JLabel l = (JLabel) super.getTableCellRendererComponent(table, value, isSelected, hasFocus, row,
+                            column);
                     l.setBackground(Common.isDarkMode ? new Color(40, 40, 40) : new Color(245, 245, 245));
                     l.setFont(F_HEADER);
                     l.setForeground(Common.getText());
@@ -161,67 +169,52 @@ public class PanelSMTP extends JPanel {
                 }
             });
 
+            // 👇 Actualizar ScrollPane de la tabla
             updateScrollPaneTheme(emailTable, fieldBg, border);
         }
 
+        // 7. Botones
         updateButtonsTheme();
 
         this.repaint();
         this.revalidate();
     }
 
-    /**
-     * Formats the style and titled border for a specific panel.
-     * @param p The target panel.
-     * @param title The localized title string.
-     */
     private void updatePanelStyle(JPanel p, String title) {
-        if (p == null) return;
+        if (p == null)
+            return;
         p.setBackground(Common.getPanelBackground());
         p.setBorder(new CompoundBorder(
-            new LineBorder(Common.getBorder(), 1), 
-            new TitledBorder(new EmptyBorder(10, 10, 10, 10), title, 
-                TitledBorder.LEFT, TitledBorder.TOP, F_HEADER, Common.getText())
-        ));
+                new LineBorder(Common.getBorder(), 1),
+                new TitledBorder(new EmptyBorder(10, 10, 10, 10), title,
+                        TitledBorder.LEFT, TitledBorder.TOP, F_HEADER, Common.getText())));
     }
 
-    /**
-     * Styles text input components according to the current theme.
-     * @param c The component to be updated.
-     */
     private void updateFieldStyle(JTextComponent c) {
-        if (c == null) return;
+        if (c == null)
+            return;
         c.setBackground(Common.getFieldBackground());
         c.setForeground(Common.getText());
         c.setCaretColor(Common.getText());
         if (c instanceof JTextField) {
             c.setBorder(new CompoundBorder(
-                new LineBorder(Common.getBorder(), 1), 
-                new EmptyBorder(2, 5, 2, 5)
-            ));
+                    new LineBorder(Common.getBorder(), 1),
+                    new EmptyBorder(2, 5, 2, 5)));
         }
     }
 
-    /**
-     * Specifically updates the style for JTextArea components.
-     * @param area The text area to update.
-     */
     private void updateTextAreaStyle(JTextArea area) {
-        if (area == null) return;
+        if (area == null)
+            return;
         area.setBackground(Common.getFieldBackground());
         area.setForeground(Common.getText());
         area.setCaretColor(Common.getText());
         area.setBorder(new EmptyBorder(5, 5, 5, 5));
 
+        // Actualizar ScrollPane
         updateScrollPaneTheme(area, Common.getFieldBackground(), Common.getBorder());
     }
 
-    /**
-     * Synchronizes scroll pane colors with their internal viewports and components.
-     * @param component The inner component.
-     * @param bg Background color.
-     * @param border Border color.
-     */
     private void updateScrollPaneTheme(Component component, Color bg, Color border) {
         if (component.getParent() instanceof JViewport) {
             JViewport viewport = (JViewport) component.getParent();
@@ -235,16 +228,13 @@ public class PanelSMTP extends JPanel {
         }
     }
 
-    /**
-     * Refreshes the color palette for all functional buttons (Normal, Danger, and Accent).
-     */
     private void updateButtonsTheme() {
         Color bg = Common.getPanelBackground();
         Color txt = Common.getText();
         Color danger = Common.getDanger();
         Color accent = Common.getAccent();
 
-        JButton[] normalButtons = {btnAttach, btnRefresh, btnToggleRead, btnDownloadEmail};
+        JButton[] normalButtons = { btnAttach, btnRefresh, btnToggleRead, btnDownloadEmail };
         for (JButton b : normalButtons) {
             if (b != null) {
                 b.setBackground(bg);
@@ -259,7 +249,7 @@ public class PanelSMTP extends JPanel {
             btnSend.setBorder(new LineBorder(accent, 1, true));
         }
 
-        JButton[] dangerButtons = {btnClearAttach, btnDelete, btnReturn};
+        JButton[] dangerButtons = { btnClearAttach, btnDelete, btnReturn };
         for (JButton b : dangerButtons) {
             if (b != null) {
                 b.setBackground(danger);
@@ -269,14 +259,12 @@ public class PanelSMTP extends JPanel {
         }
     }
 
-    /**
-     * Dynamically updates all UI text labels and identifiers based on the current language settings.
-     */
     public void updateAllTexts() {
         lblTo.setText(Language.get(55));
         lblSubject.setText(Language.get(56));
 
-        if (lblFolder != null) lblFolder.setText(Language.get(197)); 
+        if (lblFolder != null)
+            lblFolder.setText(Language.get(197));
 
         String currentLabel = lblAttachedFile.getText();
         if (currentLabel.contains("No ") || currentLabel.contains("files") || currentLabel.contains("SIN")) {
@@ -287,8 +275,8 @@ public class PanelSMTP extends JPanel {
         btnClearAttach.setText(Language.get(58));
         btnSend.setText(Language.get(59));
 
-        tableModel.setColumnIdentifiers(new String[]{
-            Language.get(61), Language.get(62), Language.get(63)
+        tableModel.setColumnIdentifiers(new String[] {
+                Language.get(61), Language.get(62), Language.get(63)
         });
 
         btnRefresh.setText(Language.get(64));
@@ -302,6 +290,7 @@ public class PanelSMTP extends JPanel {
             txtViewer.setText(Language.get(68));
         }
 
+        // Actualizar títulos de paneles
         updatePanelStyle(pCompose, Language.get(53));
         updatePanelStyle(pInbox, Language.get(54));
 
@@ -309,9 +298,6 @@ public class PanelSMTP extends JPanel {
         repaint();
     }
 
-    /**
-     * Initializes all UI components, panels, and layout structures for composition and inbox.
-     */
     private void initUI() {
         pCompose = new JPanel(new BorderLayout(10, 10));
         pFields = new JPanel(new GridBagLayout());
@@ -350,6 +336,7 @@ public class PanelSMTP extends JPanel {
         pCompose.add(scrollBody, BorderLayout.CENTER);
         pCompose.add(pButtonsCompose, BorderLayout.SOUTH);
 
+        // --- Panel Inbox ---
         pInbox = new JPanel(new BorderLayout(10, 10));
 
         pFolderSelector = new JPanel(new FlowLayout(FlowLayout.LEFT, 10, 10));
@@ -360,15 +347,15 @@ public class PanelSMTP extends JPanel {
         cboFolders.setPreferredSize(new Dimension(200, 30));
         cboFolders.setFont(F_TEXT);
 
+        // Cargar carpetas disponibles
         List<String> allFolders = backend.getAvailableFolders();
-        List<String> allowedFolders = List.of("INBOX", "Spam", "Trash", "[Gmail]/Spam", "[Gmail]/Trash");
+        List<String> allowedFolders = Arrays.asList("INBOX", "Spam", "Trash", "[Gmail]/Spam", "[Gmail]/Trash");
 
         for (String folder : allFolders) {
-            if (allowedFolders.stream().anyMatch(allowed -> 
-                folder.equalsIgnoreCase(allowed) || 
-                folder.contains("Spam") || 
-                folder.contains("Trash") ||
-                folder.contains("INBOX"))) {
+            if (allowedFolders.stream().anyMatch(allowed -> folder.equalsIgnoreCase(allowed) ||
+                    folder.contains("Spam") ||
+                    folder.contains("Trash") ||
+                    folder.contains("INBOX"))) {
                 cboFolders.addItem(folder);
             }
         }
@@ -384,8 +371,9 @@ public class PanelSMTP extends JPanel {
 
         String[] cols = { Language.get(61), Language.get(62), Language.get(63) };
         tableModel = new DefaultTableModel(cols, 0) {
-            @Override
-            public boolean isCellEditable(int r, int c) { return false; }
+            public boolean isCellEditable(int r, int c) {
+                return false;
+            }
         };
         emailTable = createTable();
 
@@ -393,9 +381,9 @@ public class PanelSMTP extends JPanel {
         txtViewer.setEditable(false);
         txtViewer.setText(Language.get(68));
 
-        inboxSplit = new JSplitPane(JSplitPane.HORIZONTAL_SPLIT, 
-            createScrollPane(emailTable), 
-            createScrollPane(txtViewer));
+        inboxSplit = new JSplitPane(JSplitPane.HORIZONTAL_SPLIT,
+                createScrollPane(emailTable),
+                createScrollPane(txtViewer));
         inboxSplit.setDividerLocation(500);
         inboxSplit.setDividerSize(5);
         inboxSplit.setBorder(null);
@@ -430,16 +418,13 @@ public class PanelSMTP extends JPanel {
         add(mainSplit, BorderLayout.CENTER);
     }
 
-    /**
-     * Registers event listeners for the interactive components of the panel.
-     */
     private void registerListeners() {
         this.buttonHandler = new ButtonHandleSMTP(this, backend);
 
         cboFolders.addActionListener(e -> {
             String selectedFolder = (String) cboFolders.getSelectedItem();
             if (selectedFolder != null) {
-                backend.setCurrentFolder(selectedFolder); 
+                backend.setCurrentFolder(selectedFolder);
                 buttonHandler.refreshInbox(false);
             }
         });
@@ -454,11 +439,6 @@ public class PanelSMTP extends JPanel {
         applyHover(btnReturn, true);
     }
 
-    /**
-     * Applies default styles and hover effects to buttons.
-     * @param btn The button to style.
-     * @param isDanger Whether the button represents a destructive action.
-     */
     private void applyHover(JButton btn, boolean isDanger) {
         Color bg = isDanger ? Common.getDanger() : Common.getPanelBackground();
         Color fg = isDanger ? Color.WHITE : Common.getText();
@@ -467,9 +447,8 @@ public class PanelSMTP extends JPanel {
         btn.setBackground(bg);
         btn.setForeground(fg);
         btn.setBorder(new CompoundBorder(
-            new LineBorder(borderColor, 1), 
-            new EmptyBorder(5, 10, 5, 10)
-        ));
+                new LineBorder(borderColor, 1),
+                new EmptyBorder(5, 10, 5, 10)));
 
         for (java.awt.event.MouseListener ml : btn.getMouseListeners()) {
             if (ml instanceof ButtonHoverHandle) {
@@ -478,17 +457,11 @@ public class PanelSMTP extends JPanel {
         }
     }
 
-    /**
-     * Utility method to add components to a GridBagLayout panel with specific constraints.
-     * @param p The target panel.
-     * @param c The component to add.
-     * @param x Grid X position.
-     * @param y Grid Y position.
-     * @param weight Horizontal weight.
-     */
     private void addGBC(JPanel p, Component c, int x, int y, double weight) {
         GridBagConstraints gbc = new GridBagConstraints();
-        gbc.gridx = x; gbc.gridy = y; gbc.weightx = weight;
+        gbc.gridx = x;
+        gbc.gridy = y;
+        gbc.weightx = weight;
         gbc.fill = GridBagConstraints.HORIZONTAL;
         gbc.insets = new Insets(8, 5, 8, 5);
         if (c instanceof JLabel) {
@@ -497,10 +470,6 @@ public class PanelSMTP extends JPanel {
         p.add(c, gbc);
     }
 
-    /**
-     * Factory method for creating themed text fields.
-     * @return A stylized JTextField.
-     */
     private JTextField createField() {
         JTextField f = new JTextField();
         f.setPreferredSize(new Dimension(200, 30));
@@ -509,10 +478,6 @@ public class PanelSMTP extends JPanel {
         return f;
     }
 
-    /**
-     * Factory method for creating themed text areas.
-     * @return A stylized JTextArea.
-     */
     private JTextArea createTextArea() {
         JTextArea a = new JTextArea();
         a.setFont(F_TEXT);
@@ -522,21 +487,10 @@ public class PanelSMTP extends JPanel {
         return a;
     }
 
-    /**
-     * Wraps a component in a JScrollPane.
-     * @param c The component to wrap.
-     * @return The resulting JScrollPane.
-     */
     private JScrollPane createScrollPane(Component c) {
         return new JScrollPane(c);
     }
 
-    /**
-     * Factory method for creating themed buttons.
-     * @param text The button label.
-     * @param isDanger Whether it is a danger-type button.
-     * @return A stylized JButton.
-     */
     private JButton createButton(String text, boolean isDanger) {
         JButton b = new JButton(text);
         b.setPreferredSize(new Dimension(140, 35));
@@ -546,10 +500,6 @@ public class PanelSMTP extends JPanel {
         return b;
     }
 
-    /**
-     * Factory method for creating a themed JTable for the inbox.
-     * @return A stylized JTable.
-     */
     private JTable createTable() {
         JTable t = new JTable(tableModel);
         t.setFont(F_TEXT);
@@ -558,27 +508,71 @@ public class PanelSMTP extends JPanel {
         return t;
     }
 
-    public JTextField getTxtTo() { return txtTo; }
-    public JTextField getTxtSubject() { return txtSubject; }
-    public JTextArea getTxtBody() { return txtBody; }
-    public JTextArea getTxtViewer() { return txtViewer; }
-    public JTable getEmailTable() { return emailTable; }
-    public DefaultTableModel getTableModel() { return tableModel; }
-    public JButton getBtnSend() { return btnSend; }
-    public JButton getBtnAttach() { return btnAttach; }
-    public JButton getBtnClearAttach() { return btnClearAttach; }
-    public JButton getBtnRefresh() { return btnRefresh; }
-    public JButton getBtnDelete() { return btnDelete; }
-    public JButton getBtnToggleRead() { return btnToggleRead; }
-    public JButton getBtnDownloadEmail() { return btnDownloadEmail; }
-    public JLabel getLblAttachedFile() { return lblAttachedFile; }
-    public JButton getBtnReturn() { return btnReturn; }
-    public void setBtnReturn(JButton btnReturn) { this.btnReturn = btnReturn; }
+    // Getters
+    public JTextField getTxtTo() {
+        return txtTo;
+    }
 
-    /**
-     * Sets a callback action for the return operation.
-     * @param callback The Runnable to execute on return.
-     */
+    public JTextField getTxtSubject() {
+        return txtSubject;
+    }
+
+    public JTextArea getTxtBody() {
+        return txtBody;
+    }
+
+    public JTextArea getTxtViewer() {
+        return txtViewer;
+    }
+
+    public JTable getEmailTable() {
+        return emailTable;
+    }
+
+    public DefaultTableModel getTableModel() {
+        return tableModel;
+    }
+
+    public JButton getBtnSend() {
+        return btnSend;
+    }
+
+    public JButton getBtnAttach() {
+        return btnAttach;
+    }
+
+    public JButton getBtnClearAttach() {
+        return btnClearAttach;
+    }
+
+    public JButton getBtnRefresh() {
+        return btnRefresh;
+    }
+
+    public JButton getBtnDelete() {
+        return btnDelete;
+    }
+
+    public JButton getBtnToggleRead() {
+        return btnToggleRead;
+    }
+
+    public JButton getBtnDownloadEmail() {
+        return btnDownloadEmail;
+    }
+
+    public JLabel getLblAttachedFile() {
+        return lblAttachedFile;
+    }
+
+    public JButton getBtnReturn() {
+        return btnReturn;
+    }
+
+    public void setBtnReturn(JButton btnReturn) {
+        this.btnReturn = btnReturn;
+    }
+
     public void setOnReturnCallback(Runnable callback) {
         if (buttonHandler != null) {
             buttonHandler.setOnReturnCallback(callback);
